tests/ui/let-else/let-else-binding-immutable.stderr
error[E0594]: cannot assign to `*x`, which is behind a `&` reference
  --> $DIR/let-else-binding-immutable.rs:9:5
   |
LL |     *x += 1;
   |     ^^^^^^^ `x` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
